# poll_service_api

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  Readme.md  docker-compose.yml  render.yaml  render.yml
.github/workflows/: ci.yaml  ci.yml
app/: .coveragerc  .env.example  .flake8  Dockerfile  exceptions.py  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
app/common/: exc_enums.py  exceptions.py  utils.py
app/config/: database.py  settings.py
app/core/: config.py  database.py
app/poll/: crud.py  handlers.py  routers.py  schemas.py  service.py
app/tests/: conftest.py  test_create_poll.py  test_db_connection.py
app/tests/poll/: conftest.py  test_create_poll.py  test_get_poll_results.py  test_vote.py
